--- a/Resources/Private/Components/Backend/EmptyContentCollection.scss
+++ b/Resources/Private/Components/Backend/EmptyContentCollection.scss
@@ -23,6 +23,7 @@
 .neos.neos.neos-empty-contentcollection-overlay {
 	$height: 41px;
 	height: $height;
+	width: 100%;
 	margin-left: 2px;
 	margin-right: 2px;
 	text-align: right;
