--- a/Resources/Private/Templates/TypoScriptObjects/Menu.html
+++ b/Resources/Private/Templates/TypoScriptObjects/Menu.html
@@ -1,18 +1,20 @@
 {namespace neos=TYPO3\Neos\ViewHelpers}
 {namespace ts=TYPO3\TypoScript\ViewHelpers}
-<f:for each="{items}" as="item" iteration="iteration">
-	<f:if condition="{iteration.isFirst}">
-		<ul{attributes -> f:format.raw()}>
-			{prepend -> f:format.raw()}
-	</f:if>
-	<li{ts:render(path:'{item.state}.attributes', context: {item: item}) -> f:format.raw()}>
-		{ts:render(path:'link', context: {node: item.node}) -> f:format.raw()}
-		<f:if condition="{item.subItems}">
-			<f:render section="Menu" arguments="{items: item.subItems}" />
+<f:section name="Menu">
+	<f:for each="{items}" as="item" iteration="iteration">
+		<f:if condition="{iteration.isFirst}">
+			<ul{attributes -> f:format.raw()}>
+				{prepend -> f:format.raw()}
 		</f:if>
-	</li>
-	<f:if condition="{iteration.isLast}">
-			{append -> f:format.raw()}
-		</ul>
-	</f:if>
-</f:for>
+		<li{ts:render(path:'{item.state}.attributes', context: {item: item}) -> f:format.raw()}>
+			{ts:render(path:'link', context: {node: item.node}) -> f:format.raw()}
+			<f:if condition="{item.subItems}">
+				<f:render section="Menu" arguments="{items: item.subItems}" />
+			</f:if>
+		</li>
+		<f:if condition="{iteration.isLast}">
+				{append -> f:format.raw()}
+			</ul>
+		</f:if>
+	</f:for>
+</f:section>
