--- a/Resources/Private/Components/Dropdown/Dropdown.scss
+++ b/Resources/Private/Components/Dropdown/Dropdown.scss
@@ -39,7 +39,7 @@ $dropdown-min-width: 100px !default;
 	}
 
 	ul {
-		position: realtive;
+		position: relative;
 		overflow-x: hidden;
 		overflow-y: auto;
 		-webkit-overflow-scrolling: touch;
