--- a/Resources/Private/Templates/TypoScriptObjects/Menu.html
+++ b/Resources/Private/Templates/TypoScriptObjects/Menu.html
@@ -1,4 +1,4 @@
-{namespace ts=TYPO3\TypoScript\ViewHelpers}
+{namespace ts=Neos\Fusion\ViewHelpers}
 <f:section name="Menu">
 	<f:for each="{items}" as="item" iteration="iteration">
 		<f:if condition="{iteration.isFirst}">
